tests/ui/cast_targets/postgres/fail/sqlite_marker_in_postgres.stderr
error[E0277]: the trait bound `drizzle_types::sqlite::types::Integer: CastTarget<'_, Int, drizzle_core::dialect::PostgresDialect>` is not satisfied
  --> tests/ui/cast_targets/postgres/fail/sqlite_marker_in_postgres.rs:14:59
   |
14 |         cast::<_, _, drizzle::core::types::Int>(user.age, drizzle_types::sqlite::types::Integer);
   |         ---------------------------------------           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, Int, drizzle_core::dialect::PostgresDialect>` is not implemented for `drizzle_types::sqlite::types::Integer`
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `CastTarget<'_, Int, drizzle_core::dialect::PostgresDialect>` is not implemented for `drizzle_types::sqlite::types::Integer`
      but trait `CastTarget<'_, drizzle_types::BigInt, drizzle_core::dialect::SQLiteDialect>` is implemented for it
  --> core/src/expr/util.rs
   |
   | / impl<'a> CastTarget<'a, crate::types::BigInt, SQLiteDialect>
   | |     for drizzle_types::sqlite::types::Integer
   | |_____________________________________________^
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
